# funtoram

./: LICENSE  README.md  publish.yml  pyproject.toml
.github/workflows/: publish.yml
src/functiontoram_package/: functionram.py
