[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "functionram"
version = "1.0"
authors = [
  { name="Miki", email="l0926@pjwstk.edu.pl" },
]
description = "Stores functions work in cache, so your pc won't do same function twice and will get that from cache"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Mikibbwb/funtoram/tree/package"